# esg-checklist-ai

./: .env.template  .gitignore  10_Run backend unit tests.txt  ADMIN_CRUD_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_REFACTORING_COMPLETE.md  CHECKLISTS_OVERVIEW.md  CONFIGURATION_IMPLEMENTATION_COMPLETE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_BREAKDOWN.md  LICENSE  Makefile  PROJECT_CLEANUP_COMPLETE.md  PROJECT_SUMMARY.md  QA_REFACTORING_TESTING_CHECKLIST.md  README.md  README_OLD.md  REFACTORING_FINAL_REPORT.md  ROLE_IMPLEMENTATION_STATUS.md  ROLE_SYSTEM_COMPLETE.md  docker-compose.yml  esg-checklist-ai.code-workspace  migrate.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.config/: .dockerignore  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  esg-checklist-ai.code-workspace  nginx.conf
.github/workflows/: comprehensive-ci.yml  security.yml
backend/: .env  .env.example  AUDIT_SYSTEM_INTEGRATION.md  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  comprehensive_swagger_test.py  create_search_indexes.py  dump.rdb  run_server.py  sample_esg_document.txt  simple_test.py  test.db  test.db.backup.20250626_151559  test_all_apis.py  test_comprehensive_apis.py  test_config.py  test_notifications.py  test_search_performance.py
backend/alembic/: env.py
backend/alembic/versions/: 30ad78267e25_fix_models_and_add_email_support.py  3e5ffe58c14a_remove_duplicate_comment_text_column.py  5c66cd926c8e_add_submissionanswer_table.py  8cba291295eb_add_notification_table_with_indexes.py  a001_initial_migration.py  a22a6b91fb8b_final_schema_fixes.py  bd3d51f9841e_initial_migration_with_all_models.py  e095b101e7f5_fix_schema_inconsistencies_and_add_.py
backend/app/: __init__.py  auth.py  config.py  create_tables.py  database.py  main.py  models.py  rate_limiting.py  schemas.py
backend/app/ai/: __init__.py  department_configs.py  enhanced_prompts.py  scorer.py  scorer.py.backup
backend/app/routers/: admin_checklists.py  admin_users.py  analytics.py  auth.py  checklists.py  departments.py  export.py  notifications.py  realtime_analytics.py  reviews.py  submissions.py  uploads.py  users.py
backend/app/routers/admin/: __init__.py  checklists.py  users.py
backend/app/routers/api/: __init__.py  analytics.py  checklists.py  notifications.py  reviews.py  users.py
backend/app/routers/submissions/: __init__.py  submissions.py
backend/app/schemas/: __init__.py  analytics.py  checklists.py  common.py  reviews.py  submissions.py  uploads.py  users.py
backend/app/security/: __init__.py  config.py  headers.py  rate_limiting.py  secrets.py  tokens.py  validation.py
backend/app/services/: realtime_analytics.py.backup
backend/app/utils/: __init__.py  ai.py  audit.py  email.py  emailer.py  file_security.py  notification_emailer.py  notifications.py
backend/tests/: README.md  conftest.py  test_basic_api.py  test_comprehensive_coverage.py  test_high_impact_coverage.py  test_integration_api.py  test_models.py  test_routes_coverage.py
data/: ai_training_dataset.json  enhanced_ai_prompts.json  enhanced_scoring_rubric.json  individual_sample_test_results.json  processed_esg_data.json  production_config.json
docs/: PROJECT_DOCUMENTATION.md  PROJECT_STATUS.md  SYSTEM_CREDENTIALS.md  ai-abstraction-guide.md  deployment-guide.md  error-fixes-summary.md  individual-sample-test-report.md  integration-complete.md  project-completion-report.md  system-integration-report.md
frontend/: .prettierignore  .prettierrc  DEVELOPMENT_TOOLS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  AppNew.tsx  App_broken.tsx  App_new.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  AuthGuard.tsx  DataVisualization.tsx  DebugAuth.tsx  ErrorBoundary.tsx  FileUploadProgress.tsx  FileUploader.tsx  FileUploaderNew.tsx  GlobalSearch.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx  Navbar.tsx.backup  Notifications.tsx  PrivateRoute.tsx  ProtectedRoute.tsx  RealTimeDashboard.tsx  RoleDashboard.tsx  Sidebar.tsx  SuspenseBoundary.tsx  SystemStatusCard.tsx  TestDashboard.tsx  UserActivityFeed.tsx
frontend/src/components/dashboards/: AdminDashboard.tsx  AuditorDashboard.tsx  ReviewerDashboard.backup.tsx  ReviewerDashboard.broken.tsx  ReviewerDashboard.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  AuthContextNew.tsx  ErrorContext.tsx  ErrorContextContext.tsx  ErrorContextType.ts  NotificationContext.tsx  ThemeContext.tsx  useError.ts
frontend/src/hooks/: usePolling.ts  useWebSocket.ts
frontend/src/pages/: AdvancedAnalytics.tsx  AdvancedFileUpload.tsx  Analytics.tsx  AnalyticsFixed.tsx  AnalyticsSimple.tsx  AuditTrail.tsx  ChecklistDetail.tsx  ChecklistManagement.tsx  ChecklistSubmit.tsx  ChecklistUpload.tsx  Checklists.tsx  Dashboard.tsx  DashboardNew.tsx  Documentation.tsx  Help.tsx  Login.tsx  LoginNew.tsx  Reports.tsx  ReportsOld.tsx  Reviews.tsx  Search.tsx  Settings.tsx  SystemAdministration.tsx  SystemConfiguration.tsx  UploadPage.tsx  UserManagement.tsx
frontend/src/services/: api.ts
frontend/src/test/: AuthContext.test.tsx  AuthGuard.test.tsx  ErrorBoundary.test.tsx  FileUploader.test.tsx  LoadingSpinner.test.tsx  Login.test.tsx  api.service.test.ts  api.test.ts  authUtils.test.ts  setup.ts
frontend/src/theme/: index.ts
frontend/src/utils/: authUtils.ts
notebooks/: ai_performance_analysis.ipynb  esg_data_analysis.ipynb
src/: checklist_ingestion.py  enhanced_esg_processor.py  esg_system_integrator.py  individual_sample_tester.py  real_samples_analyzer.py
templates/: esg_checklist_template.md  esg_report_template.md
tools/: README.md  contract_testing.py  e2e_test_runner.py
